# ipc

./: CMakeLists.txt  Linklib.cmake  Toolchains.cmake
alg/: CMakeLists.txt
alg/src/: NearPassengerFlow.cpp  NearPassengerFlow.h  Uluai.cpp  Uluai.h  main.cpp
alg/ulucu/include/: IULUBaseType.h  IULUFace.h  IULUFeatureExtract.h  IULUObjDetect.h  IULUPerson.h  IULUSpeechRec.h  IULUStream.h
application/: CMakeLists.txt  Main.cpp  Media.cpp  Media.h  OacClientTest.cpp  OacClientTest.h
application/ulucu/include/: ElapsedTrace.hpp  IULUCarPlate.h  IULUDumpDesc.h  IULUImageIO.h  IULUOCR.h  IULUPose.h
application/ulucu/lib/: librga.so.2.1.0
config/: default_config.json  users.json
hardware/: CMakeLists.txt
hardware/media/: audio.h  audioImpl.cpp  image.h  media.h  mediaImpl.h  mediaPlatform.h  meidaImpl.cpp  video.h  videoImpl.cpp  videoImpl.h
hardware/soc/FH885XV200/: mediaPlatformImpl.cpp  mediaPlatformImpl.h
hardware/soc/RK/: Linklib.cmake  mediaPlatformImpl.cxx  mediaPlatformImpl.hxx  rkAudio.cpp  rkAudio.h  rkImage.cpp  rkImage.h  rkMedia.cpp  rkMedia.h  rkVideo.cpp  rkVideo.h
hardware/soc/RK/include/rkaiq/common/: rk_aiq_offline_raw.h
hardware/soc/RK/include/rkmedia/: rkmedia_api.h
hardware/soc/RK/lib/: libasound.so.2.0.0  librga.so.2  libv4l2.so.0.0.0
hardware/soc/X86/: mediaPlatformImpl.cpp  mediaPlatformImpl.h  x86Video.cpp  x86Video.h
hardware/soc/win32/: Linklib.cmake  mediaPlatformImpl.cpp
hardware/soc/x86/: Linklib.cmake  x86FileMediaSource.cpp  x86Image.cpp  x86Image.h  x86Video.cpp  x86Video.h
pack/: README.md
(+1 files in other folders)
